[gd_scene load_steps=18 format=3 uid="uid://js187adyneae"]

[ext_resource type="Script" path="res://parallax_scrolling_scene.gd" id="1_q8shy"]
[ext_resource type="Texture2D" uid="uid://dm4w4684pri6n" path="res://parallax_mountain_pack/Clouds/1.png" id="2_nfvk2"]
[ext_resource type="Script" path="res://ParallaxBackground.gd" id="2_vi7e5"]
[ext_resource type="Texture2D" uid="uid://5lp067rbkb37" path="res://parallax_mountain_pack/layers/tree asset/tree asset/trees-Sheet.png" id="3_akch8"]
[ext_resource type="Texture2D" uid="uid://cosb454qn55uk" path="res://Glacial-mountains-parallax-background_vnitti_v3/Glacial-mountains-parallax-background_vnitti/Layers/glacial_mountains.png" id="3_frfy8"]
[ext_resource type="Texture2D" uid="uid://ce8551ptlm0af" path="res://parallax_mountain_pack/Clouds/Clouds 1/4.png" id="4_2t8gt"]
[ext_resource type="Texture2D" uid="uid://hujm6bl4i55r" path="res://images/New Piskel (1).png" id="4_alifd"]
[ext_resource type="Texture2D" uid="uid://dhlk4dii3eray" path="res://Glacial-mountains-parallax-background_vnitti_v3/Glacial-mountains-parallax-background_vnitti/Layers/cloud_lonely.png" id="5_4bpy8"]
[ext_resource type="Texture2D" uid="uid://bndl05r8iogwv" path="res://parallax_mountain_pack/layers/Free-Summer-Pixel-Art-Backgrounds/PNG/summer6/2.png" id="6_biq1w"]
[ext_resource type="Texture2D" uid="uid://uhe6xknln378" path="res://ocean-and-clouds-free-pixel-art-backgrounds/Ocean_3/2.png" id="9_7x6v0"]
[ext_resource type="Texture2D" uid="uid://b3cxy7ghfm7cd" path="res://images/New Piskel (2).png" id="10_2tblv"]
[ext_resource type="FontFile" uid="uid://bh3bdg1fqpu35" path="res://tipographie/Cinzel-Black.ttf" id="12_sosma"]

[sub_resource type="AtlasTexture" id="AtlasTexture_hbu87"]
atlas = ExtResource("3_akch8")
region = Rect2(61, 183, 61, 61)

[sub_resource type="AtlasTexture" id="AtlasTexture_f5y87"]
atlas = ExtResource("3_akch8")
region = Rect2(0, 183, 61, 61)

[sub_resource type="SpriteFrames" id="SpriteFrames_bq10i"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hbu87")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f5y87")
}],
"loop": true,
"name": &"new_animation",
"speed": 5.0
}]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6aana"]

[sub_resource type="LabelSettings" id="LabelSettings_blsnj"]
font = ExtResource("12_sosma")
font_size = 100
font_color = Color(0, 0, 0, 1)

[node name="ParallaxScrollingScene" type="Node2D"]
position = Vector2(76, -92)
script = ExtResource("1_q8shy")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
script = ExtResource("2_vi7e5")

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2(-108, -88)
motion_scale = Vector2(0, 0)
motion_mirroring = Vector2(1920, 0)

[node name="1" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(968, 637)
scale = Vector2(3.4, 3.4)
texture = ExtResource("2_nfvk2")

[node name="ParallaxLayer5" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2(2048, 316)
motion_scale = Vector2(0, 0)

[node name="2" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer5"]
z_index = -7
position = Vector2(-1472, 445)
scale = Vector2(2, 2)
texture = ExtResource("9_7x6v0")

[node name="NewPiskel(1)" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer5"]
z_index = -7
position = Vector2(-1860, -218)
texture = ExtResource("4_alifd")

[node name="3" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer5"]
z_index = -7
position = Vector2(-320, 445)
scale = Vector2(2, 2)
texture = ExtResource("9_7x6v0")

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2(-1061, 1516)
scale = Vector2(2, 2)
motion_scale = Vector2(0.001, 0)
motion_mirroring = Vector2(1152, 0)

[node name="GlacialMountains" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer3"]
position = Vector2(1298, -608.5)
texture = ExtResource("3_frfy8")

[node name="GlacialMountains2" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer3"]
position = Vector2(1106, -608.5)
texture = ExtResource("3_frfy8")

[node name="GlacialMountains3" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer3"]
position = Vector2(722, -608.5)
texture = ExtResource("3_frfy8")

[node name="ParallaxLayer9" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2(-195, -1)
scale = Vector2(2, 2)
motion_scale = Vector2(0.052, 0)
motion_mirroring = Vector2(1920, 0)

[node name="2" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer9"]
position = Vector2(771, 89)
scale = Vector2(0.081, 0.081)
texture = ExtResource("6_biq1w")
flip_h = true

[node name="3" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer9"]
position = Vector2(423.5, 40.5)
scale = Vector2(0.14, 0.14)
texture = ExtResource("6_biq1w")

[node name="4" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer9"]
position = Vector2(41, 189)
scale = Vector2(0.1, 0.1)
texture = ExtResource("6_biq1w")

[node name="ParallaxLayer4" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2(0, -226)
scale = Vector2(2, 2)
motion_scale = Vector2(0, 0.3)
motion_mirroring = Vector2(1920, 0)

[node name="AnimatedSprite2D17" type="AnimatedSprite2D" parent="ParallaxBackground/ParallaxLayer4"]
z_index = 1
position = Vector2(137, 623)
sprite_frames = SubResource("SpriteFrames_bq10i")
flip_h = true

[node name="AnimatedSprite2D2" type="AnimatedSprite2D" parent="ParallaxBackground/ParallaxLayer4"]
z_index = 1
position = Vector2(35, 630)
sprite_frames = SubResource("SpriteFrames_bq10i")
flip_h = true

[node name="AnimatedSprite2D8" type="AnimatedSprite2D" parent="ParallaxBackground/ParallaxLayer4"]
z_index = -1
position = Vector2(12, 614)
scale = Vector2(0.24, 0.24)
sprite_frames = SubResource("SpriteFrames_bq10i")
animation = &"new_animation"

[node name="AnimatedSprite2D7" type="AnimatedSprite2D" parent="ParallaxBackground/ParallaxLayer4"]
position = Vector2(107, 622)
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_bq10i")
flip_h = true

[node name="AnimatedSprite2D18" type="AnimatedSprite2D" parent="ParallaxBackground/ParallaxLayer4"]
position = Vector2(32, 598.5)
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_bq10i")
flip_h = true

[node name="AnimatedSprite2D31" type="AnimatedSprite2D" parent="ParallaxBackground/ParallaxLayer4"]
position = Vector2(229, 631)
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_bq10i")
flip_h = true

[node name="AnimatedSprite2D19" type="AnimatedSprite2D" parent="ParallaxBackground/ParallaxLayer4"]
position = Vector2(73, 625)
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_bq10i")
flip_h = true

[node name="AnimatedSprite2D10" type="AnimatedSprite2D" parent="ParallaxBackground/ParallaxLayer4"]
position = Vector2(85, 643)
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_bq10i")
flip_h = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="ParallaxBackground/ParallaxLayer4"]
position = Vector2(124, 616)
scale = Vector2(0.4, 0.4)
sprite_frames = SubResource("SpriteFrames_bq10i")

[node name="AnimatedSprite2D11" type="AnimatedSprite2D" parent="ParallaxBackground/ParallaxLayer4"]
position = Vector2(142, 640)
scale = Vector2(0.4, 0.4)
sprite_frames = SubResource("SpriteFrames_bq10i")

[node name="AnimatedSprite2D29" type="AnimatedSprite2D" parent="ParallaxBackground/ParallaxLayer4"]
position = Vector2(178, 636)
scale = Vector2(0.4, 0.4)
sprite_frames = SubResource("SpriteFrames_bq10i")

[node name="AnimatedSprite2D30" type="AnimatedSprite2D" parent="ParallaxBackground/ParallaxLayer4"]
position = Vector2(201, 618)
scale = Vector2(0.4, 0.4)
sprite_frames = SubResource("SpriteFrames_bq10i")

[node name="AnimatedSprite2D5" type="AnimatedSprite2D" parent="ParallaxBackground/ParallaxLayer4"]
position = Vector2(15, 601)
scale = Vector2(0.2, 0.2)
sprite_frames = SubResource("SpriteFrames_bq10i")
animation = &"new_animation"

[node name="AnimatedSprite2D20" type="AnimatedSprite2D" parent="ParallaxBackground/ParallaxLayer4"]
position = Vector2(162, 640)
scale = Vector2(0.2, 0.2)
sprite_frames = SubResource("SpriteFrames_bq10i")
animation = &"new_animation"

[node name="AnimatedSprite2D25" type="AnimatedSprite2D" parent="ParallaxBackground/ParallaxLayer4"]
position = Vector2(186, 623)
scale = Vector2(0.2, 0.2)
sprite_frames = SubResource("SpriteFrames_bq10i")
animation = &"new_animation"

[node name="AnimatedSprite2D26" type="AnimatedSprite2D" parent="ParallaxBackground/ParallaxLayer4"]
position = Vector2(174, 637)
scale = Vector2(0.2, 0.2)
sprite_frames = SubResource("SpriteFrames_bq10i")
animation = &"new_animation"

[node name="AnimatedSprite2D21" type="AnimatedSprite2D" parent="ParallaxBackground/ParallaxLayer4"]
position = Vector2(100, 639)
scale = Vector2(0.2, 0.2)
sprite_frames = SubResource("SpriteFrames_bq10i")
animation = &"new_animation"

[node name="AnimatedSprite2D22" type="AnimatedSprite2D" parent="ParallaxBackground/ParallaxLayer4"]
position = Vector2(55, 642)
scale = Vector2(0.2, 0.2)
sprite_frames = SubResource("SpriteFrames_bq10i")
animation = &"new_animation"

[node name="AnimatedSprite2D23" type="AnimatedSprite2D" parent="ParallaxBackground/ParallaxLayer4"]
position = Vector2(29, 633)
scale = Vector2(0.2, 0.2)
sprite_frames = SubResource("SpriteFrames_bq10i")
animation = &"new_animation"

[node name="AnimatedSprite2D24" type="AnimatedSprite2D" parent="ParallaxBackground/ParallaxLayer4"]
position = Vector2(7, 622)
scale = Vector2(0.2, 0.2)
sprite_frames = SubResource("SpriteFrames_bq10i")
animation = &"new_animation"

[node name="AnimatedSprite2D6" type="AnimatedSprite2D" parent="ParallaxBackground/ParallaxLayer4"]
position = Vector2(151, 620)
scale = Vector2(0.24, 0.24)
sprite_frames = SubResource("SpriteFrames_bq10i")
animation = &"new_animation"

[node name="AnimatedSprite2D9" type="AnimatedSprite2D" parent="ParallaxBackground/ParallaxLayer4"]
position = Vector2(121, 631)
scale = Vector2(0.24, 0.24)
sprite_frames = SubResource("SpriteFrames_bq10i")
animation = &"new_animation"

[node name="AnimatedSprite2D3" type="AnimatedSprite2D" parent="ParallaxBackground/ParallaxLayer4"]
position = Vector2(58, 629)
scale = Vector2(0.31, 0.31)
sprite_frames = SubResource("SpriteFrames_bq10i")

[node name="AnimatedSprite2D4" type="AnimatedSprite2D" parent="ParallaxBackground/ParallaxLayer4"]
position = Vector2(77, 622)
scale = Vector2(0.3, 0.3)
sprite_frames = SubResource("SpriteFrames_bq10i")
flip_h = true

[node name="AnimatedSprite2D12" type="AnimatedSprite2D" parent="ParallaxBackground/ParallaxLayer4"]
position = Vector2(9, 637)
scale = Vector2(0.3, 0.3)
sprite_frames = SubResource("SpriteFrames_bq10i")
flip_h = true

[node name="AnimatedSprite2D13" type="AnimatedSprite2D" parent="ParallaxBackground/ParallaxLayer4"]
position = Vector2(91, 624)
scale = Vector2(0.3, 0.3)
sprite_frames = SubResource("SpriteFrames_bq10i")
flip_h = true

[node name="AnimatedSprite2D27" type="AnimatedSprite2D" parent="ParallaxBackground/ParallaxLayer4"]
position = Vector2(202, 637)
scale = Vector2(0.3, 0.3)
sprite_frames = SubResource("SpriteFrames_bq10i")
flip_h = true

[node name="AnimatedSprite2D28" type="AnimatedSprite2D" parent="ParallaxBackground/ParallaxLayer4"]
position = Vector2(166, 617)
scale = Vector2(0.3, 0.3)
sprite_frames = SubResource("SpriteFrames_bq10i")
flip_h = true

[node name="AnimatedSprite2D14" type="AnimatedSprite2D" parent="ParallaxBackground/ParallaxLayer4"]
position = Vector2(114, 639)
scale = Vector2(0.3, 0.3)
sprite_frames = SubResource("SpriteFrames_bq10i")
flip_h = true

[node name="AnimatedSprite2D15" type="AnimatedSprite2D" parent="ParallaxBackground/ParallaxLayer4"]
position = Vector2(45, 636)
scale = Vector2(0.3, 0.3)
sprite_frames = SubResource("SpriteFrames_bq10i")
flip_h = true

[node name="AnimatedSprite2D16" type="AnimatedSprite2D" parent="ParallaxBackground/ParallaxLayer4"]
position = Vector2(11, 609)
scale = Vector2(0.3, 0.3)
sprite_frames = SubResource("SpriteFrames_bq10i")
flip_h = true

[node name="ParallaxLayer6" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2(-368, -50)
scale = Vector2(1.7, 1.7)
motion_scale = Vector2(-0.13, 0)
motion_mirroring = Vector2(1151, 0)

[node name="4" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer6"]
position = Vector2(504.118, 187.647)
texture = ExtResource("4_2t8gt")

[node name="5" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer6"]
position = Vector2(1080, 187.647)
texture = ExtResource("4_2t8gt")

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2(-69, 95)
motion_scale = Vector2(0.1, 0.1)
motion_mirroring = Vector2(1360, 0)

[node name="CloudLonely" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer2"]
position = Vector2(45, 194)
texture = ExtResource("5_4bpy8")

[node name="ParallaxLayer7" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2(375, 319)
motion_scale = Vector2(0.1, 0.1)
motion_mirroring = Vector2(1360, 0)

[node name="CloudLonely" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer7"]
z_index = -2
position = Vector2(429, 118)
scale = Vector2(1.34, 1.34)
texture = ExtResource("5_4bpy8")
flip_h = true

[node name="ParallaxLayer8" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2(2364, 256)
motion_scale = Vector2(-0.2, 0)
motion_mirroring = Vector2(1920, 0)

[node name="NewPiskel(2)" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer8"]
position = Vector2(115, 375)
scale = Vector2(0.5, 0.5)
texture = ExtResource("10_2tblv")

[node name="Quit" type="Button" parent="."]
offset_left = 632.0
offset_top = 827.0
offset_right = 1126.0
offset_bottom = 966.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 0)
theme_override_colors/font_focus_color = Color(0, 0, 0, 0)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 0)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 0)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0.00392157)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 0)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 0)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 0)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 0)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 0)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 0)
theme_override_fonts/font = ExtResource("12_sosma")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxEmpty_6aana")
text = "Quitter le jeu"

[node name="Options" type="Button" parent="."]
offset_left = 1386.0
offset_top = 968.0
offset_right = 1622.0
offset_bottom = 1055.0
theme_override_fonts/font = ExtResource("12_sosma")
text = "Options & Controls"
metadata/_edit_use_anchors_ = true

[node name="Play" type="Button" parent="."]
offset_left = 521.0
offset_top = 581.0
offset_right = 1225.0
offset_bottom = 777.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 0)
theme_override_colors/font_focus_color = Color(0, 0, 0, 0)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 0)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 0)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0.00392157)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 0)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 0)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 0)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 0)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 0)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 0)
theme_override_fonts/font = ExtResource("12_sosma")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxEmpty_6aana")
text = "Play"

[node name="Label" type="Label" parent="."]
offset_left = 276.0
offset_top = 444.0
offset_right = 1624.0
offset_bottom = 592.0
text = "Le Chemain vers l'Honneur"
label_settings = SubResource("LabelSettings_blsnj")

[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Play" to="." method="_on_play_pressed"]
